--- a/dashboard.html
+++ b/dashboard.html
@@ -6,345 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard - Upload File</title>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-            background: #f5f7fa;
-            min-height: 100vh;
-        }
-
-        .navbar {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            color: white;
-            padding: 20px 40px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-        }
-
-        .navbar h1 {
-            font-size: 24px;
-            font-weight: 700;
-        }
-
-        .user-info {
-            display: flex;
-            align-items: center;
-            gap: 20px;
-        }
-
-        .user-email {
-            font-size: 14px;
-            opacity: 0.9;
-        }
-
-        .logout-btn {
-            background: rgba(255, 255, 255, 0.2);
-            color: white;
-            border: none;
-            padding: 10px 20px;
-            border-radius: 8px;
-            cursor: pointer;
-            font-size: 14px;
-            font-weight: 600;
-            transition: all 0.3s ease;
-        }
-
-        .logout-btn:hover {
-            background: rgba(255, 255, 255, 0.3);
-        }
-
-        .container {
-            max-width: 1200px;
-            margin: 40px auto;
-            padding: 0 20px;
-        }
-
-        .upload-section {
-            background: white;
-            border-radius: 16px;
-            padding: 40px;
-            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08);
-            margin-bottom: 40px;
-        }
-
-        .upload-section h2 {
-            font-size: 24px;
-            margin-bottom: 24px;
-            color: #1f2937;
-        }
-
-        .upload-area {
-            border: 3px dashed #d1d5db;
-            border-radius: 12px;
-            padding: 60px 40px;
-            text-align: center;
-            transition: all 0.3s ease;
-            cursor: pointer;
-            background: #f9fafb;
-        }
-
-        .upload-area:hover {
-            border-color: #667eea;
-            background: #f3f4ff;
-        }
-
-        .upload-area.dragover {
-            border-color: #667eea;
-            background: #e0e7ff;
-        }
-
-        .upload-icon {
-            font-size: 48px;
-            margin-bottom: 16px;
-        }
-
-        .upload-area p {
-            color: #6b7280;
-            margin-bottom: 16px;
-        }
-
-        .upload-area .highlight {
-            color: #667eea;
-            font-weight: 600;
-        }
-
-        .file-input {
-            display: none;
-        }
-
-        .upload-btn {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            color: white;
-            border: none;
-            padding: 12px 30px;
-            border-radius: 8px;
-            cursor: pointer;
-            font-size: 15px;
-            font-weight: 600;
-            margin-top: 16px;
-            transition: all 0.3s ease;
-        }
-
-        .upload-btn:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 8px 20px rgba(102, 126, 234, 0.4);
-        }
-
-        .upload-btn:disabled {
-            opacity: 0.6;
-            cursor: not-allowed;
-            transform: none;
-        }
-
-        .progress-bar {
-            width: 100%;
-            height: 8px;
-            background: #e5e7eb;
-            border-radius: 4px;
-            overflow: hidden;
-            margin-top: 20px;
-            display: none;
-        }
-
-        .progress-bar.show {
-            display: block;
-        }
-
-        .progress-fill {
-            height: 100%;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            transition: width 0.3s ease;
-            width: 0%;
-        }
-
-        .files-section {
-            background: white;
-            border-radius: 16px;
-            padding: 40px;
-            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08);
-        }
-
-        .files-section h2 {
-            font-size: 24px;
-            margin-bottom: 24px;
-            color: #1f2937;
-        }
-
-        .file-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
-            gap: 20px;
-        }
-
-        .file-card {
-            background: #f9fafb;
-            border: 1px solid #e5e7eb;
-            border-radius: 12px;
-            padding: 20px;
-            transition: all 0.3s ease;
-        }
-
-        .file-card:hover {
-            transform: translateY(-4px);
-            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
-            border-color: #667eea;
-        }
-
-        .file-icon {
-            font-size: 40px;
-            margin-bottom: 12px;
-        }
-
-        .file-name {
-            font-weight: 600;
-            color: #1f2937;
-            margin-bottom: 8px;
-            word-break: break-word;
-        }
-
-        .file-info {
-            font-size: 13px;
-            color: #6b7280;
-            margin-bottom: 16px;
-        }
-
-        .file-actions {
-            display: flex;
-            gap: 8px;
-        }
-
-        .btn-download,
-        .btn-delete {
-            flex: 1;
-            padding: 8px;
-            border: none;
-            border-radius: 6px;
-            cursor: pointer;
-            font-size: 13px;
-            font-weight: 600;
-            transition: all 0.3s ease;
-        }
-
-        .btn-download {
-            background: #667eea;
-            color: white;
-        }
-
-        .btn-download:hover {
-            background: #5568d3;
-        }
-
-        .btn-delete {
-            background: #ef4444;
-            color: white;
-        }
-
-        .btn-delete:hover {
-            background: #dc2626;
-        }
-
-        .alert {
-            padding: 14px 20px;
-            border-radius: 10px;
-            margin-bottom: 24px;
-            font-size: 14px;
-            display: none;
-            animation: slideDown 0.3s ease;
-        }
-
-        .alert.show {
-            display: block;
-        }
-
-        @keyframes slideDown {
-            from {
-                opacity: 0;
-                transform: translateY(-10px);
-            }
-
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        .alert-success {
-            background: #d1fae5;
-            color: #065f46;
-            border-left: 4px solid #10b981;
-        }
-
-        .alert-error {
-            background: #fee2e2;
-            color: #991b1b;
-            border-left: 4px solid #ef4444;
-        }
-
-        .alert-info {
-            background: #dbeafe;
-            color: #1e40af;
-            border-left: 4px solid #3b82f6;
-        }
-
-        .empty-state {
-            text-align: center;
-            padding: 60px 20px;
-            color: #9ca3af;
-        }
-
-        .empty-state-icon {
-            font-size: 64px;
-            margin-bottom: 16px;
-        }
-
-        .loading {
-            display: inline-block;
-            width: 20px;
-            height: 20px;
-            border: 3px solid rgba(255, 255, 255, 0.3);
-            border-radius: 50%;
-            border-top-color: white;
-            animation: spin 0.6s linear infinite;
-        }
-
-        @keyframes spin {
-            to {
-                transform: rotate(360deg);
-            }
-        }
-
-        .selected-file {
-            margin-top: 20px;
-            padding: 16px;
-            background: #f3f4ff;
-            border-radius: 8px;
-            border-left: 4px solid #667eea;
-            display: none;
-        }
-
-        .selected-file.show {
-            display: block;
-        }
-
-        .selected-file-name {
-            font-weight: 600;
-            color: #1f2937;
-            margin-bottom: 4px;
-        }
-
-        .selected-file-size {
-            font-size: 13px;
-            color: #6b7280;
-        }
-    </style>
+    <link rel="stylesheet" href="dashboard.css">
 </head>
 
 <body>
@@ -395,286 +57,7 @@
         </div>
     </div>
 
-    <script>
-        const SUPABASE_URL = 'https://kpvkjcfsffqcqvnxwzfu.supabase.co';
-        const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImtwdmtqY2ZzZmZxY3F2bnh3emZ1Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjExMDI2MzUsImV4cCI6MjA3NjY3ODYzNX0.MI8dXhhtyFDbg55YLFJRUHA08Id942OfNAnrXf-MrAg';
-
-        const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
-        let selectedFile = null;
-        let currentUser = null;
-
-        // Check authentication
-        async function checkAuth() {
-            const { data: { session } } = await supabase.auth.getSession();
-            if (!session) {
-                window.location.href = 'index.html';
-                return;
-            }
-            currentUser = session.user;
-            document.getElementById('userEmail').textContent = currentUser.email;
-            loadFiles();
-        }
-
-        checkAuth();
-
-        async function handleLogout() {
-            await supabase.auth.signOut();
-            window.location.href = 'index.html';
-        }
-
-        // Drag and drop handlers
-        const uploadArea = document.getElementById('uploadArea');
-
-        uploadArea.addEventListener('dragover', (e) => {
-            e.preventDefault();
-            uploadArea.classList.add('dragover');
-        });
-
-        uploadArea.addEventListener('dragleave', () => {
-            uploadArea.classList.remove('dragover');
-        });
-
-        uploadArea.addEventListener('drop', (e) => {
-            e.preventDefault();
-            uploadArea.classList.remove('dragover');
-            const files = e.dataTransfer.files;
-            if (files.length > 0) {
-                handleFileSelect({ target: { files } });
-            }
-        });
-
-        function handleFileSelect(event) {
-            const file = event.target.files[0];
-            if (!file) return;
-
-            if (file.size > 50 * 1024 * 1024) {
-                showAlert('Ukuran file maksimal 50MB', 'error');
-                return;
-            }
-
-            selectedFile = file;
-            document.getElementById('selectedFileName').textContent = file.name;
-            document.getElementById('selectedFileSize').textContent = formatFileSize(file.size);
-            document.getElementById('selectedFile').classList.add('show');
-            document.getElementById('uploadBtn').style.display = 'block';
-        }
-
-        async function uploadFile() {
-            if (!selectedFile) return;
-
-            const uploadBtn = document.getElementById('uploadBtn');
-            const uploadBtnText = document.getElementById('uploadBtnText');
-            const progressBar = document.getElementById('progressBar');
-            const progressFill = document.getElementById('progressFill');
-
-            uploadBtn.disabled = true;
-            uploadBtnText.innerHTML = '<span class="loading"></span>';
-            progressBar.classList.add('show');
-            hideAlert();
-
-            try {
-                // Generate unique filename
-                const fileExt = selectedFile.name.split('.').pop();
-                const fileName = `${Date.now()}_${Math.random().toString(36).substring(7)}.${fileExt}`;
-                const filePath = `${currentUser.id}/${fileName}`;
-
-                // Upload to Supabase Storage
-                const { data: uploadData, error: uploadError } = await supabase.storage
-                    .from('user-files')
-                    .upload(filePath, selectedFile, {
-                        cacheControl: '3600',
-                        upsert: false
-                    });
-
-                if (uploadError) throw uploadError;
-
-                // Save metadata to database
-                const { error: dbError } = await supabase
-                    .from('files')
-                    .insert([{
-                        user_id: currentUser.id,
-                        file_name: selectedFile.name,
-                        file_path: filePath,
-                        file_size: selectedFile.size,
-                        file_type: selectedFile.type || 'application/octet-stream'
-                    }]);
-
-                if (dbError) throw dbError;
-
-                // Simulate progress
-                let progress = 0;
-                const interval = setInterval(() => {
-                    progress += 10;
-                    progressFill.style.width = progress + '%';
-                    if (progress >= 100) {
-                        clearInterval(interval);
-                        setTimeout(() => {
-                            progressBar.classList.remove('show');
-                            progressFill.style.width = '0%';
-                        }, 500);
-                    }
-                }, 50);
-
-                showAlert('File berhasil diupload!', 'success');
-
-                // Reset form
-                selectedFile = null;
-                document.getElementById('fileInput').value = '';
-                document.getElementById('selectedFile').classList.remove('show');
-                document.getElementById('uploadBtn').style.display = 'none';
-
-                // Reload files list
-                loadFiles();
-
-            } catch (error) {
-                showAlert('Gagal mengupload file: ' + error.message, 'error');
-                progressBar.classList.remove('show');
-            } finally {
-                uploadBtn.disabled = false;
-                uploadBtnText.textContent = 'Upload File';
-            }
-        }
-
-        async function loadFiles() {
-            const { data: files, error } = await supabase
-                .from('files')
-                .select('*')
-                .eq('user_id', currentUser.id)
-                .order('created_at', { ascending: false });
-
-            if (error) {
-                console.error('Error loading files:', error);
-                return;
-            }
-
-            const filesList = document.getElementById('filesList');
-
-            if (!files || files.length === 0) {
-                filesList.innerHTML = `
-                    <div class="empty-state">
-                        <div class="empty-state-icon">📭</div>
-                        <p>Belum ada file yang diupload</p>
-                    </div>
-                `;
-                return;
-            }
-
-            filesList.innerHTML = files.map(file => `
-                <div class="file-card">
-                    <div class="file-icon">${getFileIcon(file.file_type)}</div>
-                    <div class="file-name">${file.file_name}</div>
-                    <div class="file-info">
-                        ${formatFileSize(file.file_size)} • ${formatDate(file.created_at)}
-                    </div>
-                    <div class="file-actions">
-                        <button class="btn-download" onclick="downloadFile('${file.file_path}', '${file.file_name}')">
-                            Download
-                        </button>
-                        <button class="btn-delete" onclick="deleteFile('${file.id}', '${file.file_path}')">
-                            Hapus
-                        </button>
-                    </div>
-                </div>
-            `).join('');
-        }
-
-        async function downloadFile(filePath, fileName) {
-            try {
-                const { data, error } = await supabase.storage
-                    .from('user-files')
-                    .download(filePath);
-
-                if (error) throw error;
-
-                const url = URL.createObjectURL(data);
-                const a = document.createElement('a');
-                a.href = url;
-                a.download = fileName;
-                document.body.appendChild(a);
-                a.click();
-                document.body.removeChild(a);
-                URL.revokeObjectURL(url);
-
-                showAlert('File berhasil didownload!', 'success');
-            } catch (error) {
-                showAlert('Gagal mendownload file: ' + error.message, 'error');
-            }
-        }
-
-        async function deleteFile(fileId, filePath) {
-            if (!confirm('Yakin ingin menghapus file ini?')) return;
-
-            try {
-                // Delete from storage
-                const { error: storageError } = await supabase.storage
-                    .from('user-files')
-                    .remove([filePath]);
-
-                if (storageError) throw storageError;
-
-                // Delete from database
-                const { error: dbError } = await supabase
-                    .from('files')
-                    .delete()
-                    .eq('id', fileId);
-
-                if (dbError) throw dbError;
-
-                showAlert('File berhasil dihapus!', 'success');
-                loadFiles();
-            } catch (error) {
-                showAlert('Gagal menghapus file: ' + error.message, 'error');
-            }
-        }
-
-        function getFileIcon(fileType) {
-            if (fileType.startsWith('image/')) return '🖼️';
-            if (fileType.startsWith('video/')) return '🎥';
-            if (fileType.startsWith('audio/')) return '🎵';
-            if (fileType.includes('pdf')) return '📄';
-            if (fileType.includes('word') || fileType.includes('document')) return '📝';
-            if (fileType.includes('excel') || fileType.includes('spreadsheet')) return '📊';
-            if (fileType.includes('zip') || fileType.includes('rar')) return '🗜️';
-            return '📎';
-        }
-
-        function formatFileSize(bytes) {
-            if (bytes === 0) return '0 Bytes';
-            const k = 1024;
-            const sizes = ['Bytes', 'KB', 'MB', 'GB'];
-            const i = Math.floor(Math.log(bytes) / Math.log(k));
-            return Math.round(bytes / Math.pow(k, i) * 100) / 100 + ' ' + sizes[i];
-        }
-
-        function formatDate(dateString) {
-            const date = new Date(dateString);
-            const now = new Date();
-            const diff = now - date;
-            const days = Math.floor(diff / (1000 * 60 * 60 * 24));
-
-            if (days === 0) return 'Hari ini';
-            if (days === 1) return 'Kemarin';
-            if (days < 7) return days + ' hari lalu';
-
-            return date.toLocaleDateString('id-ID', {
-                day: 'numeric',
-                month: 'short',
-                year: 'numeric'
-            });
-        }
-
-        function showAlert(message, type) {
-            const alert = document.getElementById('alert');
-            alert.textContent = message;
-            alert.className = `alert alert-${type} show`;
-            setTimeout(() => hideAlert(), 5000);
-        }
-
-        function hideAlert() {
-            const alert = document.getElementById('alert');
-            alert.classList.remove('show');
-        }
-    </script>
+ <script src="dashboard.js"></script>
 </body>
 
 </html>
