--- a/dashboard.html
+++ b/dashboard.html
@@ -11,7 +11,7 @@
 
 <body>
     <nav class="navbar">
-        <h1>📂 Dashboard Upload</h1>
+        <h1>📂 Angga Dashboard </h1>
         <div class="user-info">
             <span class="user-email" id="userEmail">Loading...</span>
             <button class="logout-btn" onclick="handleLogout()">Logout</button>
@@ -57,7 +57,7 @@
         </div>
     </div>
 
- <script src="dashboard.js"></script>
+    <script src="dashboard.js"></script>
 </body>
 
 </html>
